add Minimal hitting set computation, not finished yet